# IAAA25_RFE_Code

./: .gitignore  AD-FE_rf.py  AD_FE.ipynb  IAAA25_RFE_Code.ipynb  README.md  data.py  get.py  model_edge.h  model_edge_dual.h  pyproject.toml  result_all_no_reset.py  sample_result.output  summary.md
AD_FE/: platformio.ini
AD_FE/include/: model_edge_dual.h
AD_FE/src/: infer.h  main.cpp  model_edge.h
content/dataset/: Test-set_2.xlsx  Train-set_1 - draw_input.xlsx
dataset/: Test-set_1.csv  Test-set_1.xlsx  Train-set_2 - draw_input.xlsx  Train-set_2.xlsx
esp32_original/src 22 lr/: infer.h  main.cpp  model_edge.h
esp32_original/src 22 rf/: main.cpp
esp32_original/src 22 svm/: catch22_settings.h  infer.h  main.cpp  model_edge.h
esp32_original/src hj lr/: hjorth_settings.h  infer.h  main.cpp  model_edge.h
esp32_original/src hj rf/: infer.h  main.cpp
esp32_original/src hj svm/: infer.h  main.cpp  model_edge.h
esp32_original/src new lr/: infer.h  main.cpp  model_edge_dual.h
esp32_original/src new rf/: infer.h  main.cpp  model_edge_dual.h
esp32_original/src new svm/: infer.h  main.cpp  rfe_settings.h
esp32_original/src ts lr/: infer.h  main.cpp
esp32_original/src ts rf/: infer.h  main.cpp  model_edge.h
esp32_original/src ts svm/: infer.h  main.cpp
original/src 22 lr/: infer.h  main.cpp
original/src 22 rf/: infer.h  main.cpp  model_edge.h
original/src 22 svm/: infer.h  main.cpp
original/src hj lr/: infer.h  main.cpp
original/src hj rf/: infer.h  main.cpp  model_edge.h
original/src hj svm/: infer.h  main.cpp
original/src new lr/: infer.h  main.cpp
original/src new rf/: infer.h  main.cpp
original/src new svm/: infer.h  main.cpp  model_edge_dual.h
original/src ts lr/: infer.h  main.cpp  model_edge.h  tsassure_settings.h
output/: detections catch22 lr.csv  detections catch22 rf.csv  detections catch22 svm.csv  detections new rf.csv
(+5 files in other folders)
