[project]
name = "iaaa25-rfe-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown>=5.2.1",
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.1.0",
    "keras>=3.13.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pywavelets>=1.9.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "tensorflow>=2.20.0",
    "tsassure-feature>=0.7",
    "xgboost>=3.1.3",
]
