[project]
name = "iaaa25-rfe-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown>=5.2.1",
    "imbalanced-learn==0.13.0",
    "ipykernel==6.17.1",
    "keras==3.8.0",
    "lightgbm==4.5.0",
    "matplotlib==3.10.0",
    "numpy==2.0.2",
    "openpyxl==3.1.5",
    "pandas==2.2.2",
    "pywavelets==1.8.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "tensorflow==2.18.0",
    "tsassure-feature==0.7",
    "xgboost==2.1.4",
]
